tests/gen/testdata/configs/fail/platform_extension_pods_cidr_overlaps_services_cidr.jsonnet
// OKE pods CIDR cannot overlap the OKE services CIDR
// error_contains: config_params.pods_cidr must not overlap config_params.services_cidr
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      shared_project_network: { network: { vcn: '10.0.64.0/21' } },
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/20' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              pods_cidr: '10.96.0.0/16',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
